tests/baselines/reference/parserFunctionDeclaration3.errors.txt
==== tests/cases/compiler/parserFunctionDeclaration3.ts (1 errors) ====
    function foo();
    ~~~~~~~~
!!! parserFunctionDeclaration3.ts(1,1): error TS2238: Function implementation expected.